--- a/contact.html
+++ b/contact.html
@@ -14,12 +14,12 @@
   <hr>
   <form class="" action="mailto:kehinde694@gmail.com" method="post">
     <label for="">Name:</label>
-    <input type="text" name="" value=""> <br>
+    <input type="text" name="YourName" value=""> <br>
     <label for="">Your Email</label>
-  <input type="email" name="" value=""> <br>
+  <input type="email" name="YourEmail" value=""> <br>
   <label for="">Your Message</label> <br>
   <textarea name="name" rows="10" cols="30"></textarea> <br>
-  <input type="submit" name="">
+  <input type="submit" name="YourMessage">
   </form>
 </body>
 
